add cnblog_news extractor